modified:   9. Methods/An Overview.ipynb

--- a/9. Methods/An Overview.ipynb
+++ b/9. Methods/An Overview.ipynb
@@ -161,7 +161,7 @@
    "source": [
     "|Action|Description|\n",
     "|---|---|\n",
-    "|Declare|A sort of \"registration\" in the program, made so it can be successfully referenced by the rest of the program at any time.|\"\n",
+    "|Declare|A sort of \"registration\" in the program, made so it can be successfully referenced by the rest of the program at any time.|\n",
     "|Implement|The process of typing the code that actually goes about ressolving a particular task.|\n",
     "|Invoke|The process that \"calls\" the already declared method, from any other part of the code.|"
    ]
