modified:   9. Methods/An Overview.ipynb

--- a/9. Methods/An Overview.ipynb
+++ b/9. Methods/An Overview.ipynb
@@ -144,7 +144,7 @@
     }
    },
    "source": [
-    "### How to Declare, Implement and Invoke a Method"
+    "### To Declare, Implement and Invoke a Method"
    ]
   },
   {
