modified:   9. Methods/Declaration.ipynb

--- a/9. Methods/Declaration.ipynb
+++ b/9. Methods/Declaration.ipynb
@@ -77,9 +77,9 @@
    },
    "source": [
     "There are some **mandatory** elements to include when *declaring* a method: \n",
-    "- **Type** of the result, returned by the method -– `<return_type>`. \n",
-    "- Method’s **name** -– `<method_name>`. \n",
-    "- List of **parameters** to the method –- `<param_list>` \n",
+    "- **Type** of the result, returned by the method -– `return_type`. \n",
+    "- Method’s **name** -– `method_name`. \n",
+    "- List of **parameters** to the method –- `param_list` \n",
     "  - it can be *empty list* or it can consist of a *sequence of parameters* declarations.\n",
     "  - The *round brackets* – `(` and `)`, are always placed after the method’s **name**, no matter whether  it has any **parameters** or not."
    ]
