modified:   9. Methods/Declaration.ipynb

--- a/9. Methods/Declaration.ipynb
+++ b/9. Methods/Declaration.ipynb
@@ -163,7 +163,7 @@
     }
    },
    "source": [
-    "Here we must note that the **type** of returned value of a method is only part of its *declaration*, not of its *signature*. Hence, the `<return_type>` is *not* part of the Method *signature*. The reason is that if two methods differ only by their return value types, for the program, it is not clear enough which of them must be called."
+    "Here we must note that the **Type** of returned value of a method is only part of its *declaration*, not of its *signature*. Hence, the `<return_type>` is *not* part of the Method *signature*. The reason is that if two methods differ only by their return value types, for the program, it is not clear enough which of them must be called."
    ]
   }
  ],
