modified:   9. Methods/Implementation.ipynb

--- a/9. Methods/Implementation.ipynb
+++ b/9. Methods/Implementation.ipynb
@@ -155,7 +155,7 @@
     }
    },
    "source": [
-    "Whenever we declare a variable *inside the body of a Method*, we call that variable **local variable** for the Nethod.    \n",
+    "Whenever we declare a variable *inside the body of a Method*, we call that variable a **local variable** for the Method.    \n",
     "   \n",
     "The area where a **local variable** exists, and can be used, begins from the line where the variable is declared and ends at the closing curly bracket `}` of the Method body.\n",
     "   \n",
