modified:   9. Methods/Implementation.ipynb

--- a/9. Methods/Implementation.ipynb
+++ b/9. Methods/Implementation.ipynb
@@ -180,7 +180,13 @@
    "source": [
     "public class LocalVariableScopeExample\n",
     "{\n",
-    "    public string LocalString = \"If you want to see this, then you need to be within of the scope of the class\";\n",
+    "\n",
+    "    public string LocalString = \n",
+    "\n",
+    "        \"If you want to see this, \" \n",
+    "        + \n",
+    "        \"then you need to be within of the scope of the class\";\n",
+    "        \n",
     "}"
    ]
   },
