modified:   9. Methods/Implementation.ipynb

--- a/9. Methods/Implementation.ipynb
+++ b/9. Methods/Implementation.ipynb
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -207,10 +207,10 @@
    "outputs": [
     {
      "ename": "Error",
-     "evalue": "(1,1): error CS0103: The name 'LocalString' does not exist in the current context",
+     "evalue": "(3,1): error CS0103: The name 'LocalString' does not exist in the current context",
      "output_type": "error",
      "traceback": [
-      "(1,1): error CS0103: The name 'LocalString' does not exist in the current context"
+      "(3,1): error CS0103: The name 'LocalString' does not exist in the current context"
      ]
     }
    ],
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -268,8 +268,23 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -284,16 +299,19 @@
    "outputs": [
     {
      "ename": "Error",
-     "evalue": "(2,8): error CS0102: The type 'Submission#13' already contains a definition for 'AlreadyDeclared'",
+     "evalue": "(2,8): error CS0102: The type 'Submission#17' already contains a definition for 'AlreadyDeclared'",
      "output_type": "error",
      "traceback": [
-      "(2,8): error CS0102: The type 'Submission#13' already contains a definition for 'AlreadyDeclared'"
+      "(2,8): error CS0102: The type 'Submission#17' already contains a definition for 'AlreadyDeclared'"
      ]
     }
    ],
    "source": [
     "string AlreadyDeclared = \"This variable name is now reserved in memory.\";\n",
-    "string AlreadyDeclared = \"Although we can overwrite the variable's value, we cannot declare a new variable with the same name.\";"
+    "string AlreadyDeclared = \n",
+    "    \"Although we can overwrite the variable's value, \" \n",
+    "    +\n",
+    "    \"we cannot declare a new variable with the same name.\";"
    ]
   },
   {
