modified:   9. Methods/Declaration.ipynb modified:   9. Methods/Implementation.ipynb

--- a/9. Methods/Declaration.ipynb
+++ b/9. Methods/Declaration.ipynb
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -337,6 +337,21 @@
     }
    },
    "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
     "In the example above, we define a **public** method by the modifier `public`.    \n",
     "It is a special type modifier, also called  an *access modifier*, used permit the Method to be called by any C# class, no matter where.     \n",
     "   \n",
@@ -345,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -385,6 +400,21 @@
     }
    },
    "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
     "Conversely, another access modifier that we can use is the modifier `private`.   \n",
     "    \n",
     "Its function is *opposite* to that of the `public`, i.e. if a method is declared by access modifier `private`, it *cannot* be called from anywhere, except *from the class in which it is declared*."
@@ -392,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -407,10 +437,10 @@
    "outputs": [
     {
      "ename": "Error",
-     "evalue": "(4,29): error CS0122: 'AccessModifierExample.PrintPrivate()' is inaccessible due to its protection level",
+     "evalue": "(5,29): error CS0122: 'AccessModifierExample.PrintPrivate()' is inaccessible due to its protection level",
      "output_type": "error",
      "traceback": [
-      "(4,29): error CS0122: 'AccessModifierExample.PrintPrivate()' is inaccessible due to its protection level"
+      "(5,29): error CS0122: 'AccessModifierExample.PrintPrivate()' is inaccessible due to its protection level"
      ]
     }
    ],
