modified:   9. Methods/Implementation.ipynb

--- a/9. Methods/Implementation.ipynb
+++ b/9. Methods/Implementation.ipynb
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -314,10 +314,10 @@
    "outputs": [
     {
      "ename": "Error",
-     "evalue": "(2,8): error CS0102: The type 'Submission#17' already contains a definition for 'AlreadyDeclared'",
+     "evalue": "(2,8): error CS0102: The type 'Submission#21' already contains a definition for 'AlreadyDeclared'",
      "output_type": "error",
      "traceback": [
-      "(2,8): error CS0102: The type 'Submission#17' already contains a definition for 'AlreadyDeclared'"
+      "(2,8): error CS0102: The type 'Submission#21' already contains a definition for 'AlreadyDeclared'"
      ]
     }
    ],
@@ -327,6 +327,21 @@
     "    \"Although we can overwrite the variable's value, \" \n",
     "    +\n",
     "    \"we cannot declare a new variable with the same name.\";"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
    ]
   },
   {
