modified:   9. Methods/Declaration.ipynb new file:   9. Methods/Invocation.ipynb new file:   _img/Invocation Control Order.jpg

--- a/9. Methods/Declaration.ipynb
+++ b/9. Methods/Declaration.ipynb
@@ -130,7 +130,7 @@
     "- **name** of the Method, \n",
     "- a list of **parameters** passed into the Method.   \n",
     "   \n",
-    "These two elements define the so-called Method **specification** (often can be found as a **Method Signature)**.   \n",
+    "These two elements define the so-called Method **specification** (often can be found as a **Method** *signature*).   \n",
     "The following is a generalization of **Method** *signature*:"
    ]
   },
