modified:   9. Methods/Declaration.ipynb

--- a/9. Methods/Declaration.ipynb
+++ b/9. Methods/Declaration.ipynb
@@ -310,7 +310,6 @@
     "    {\n",
     "        // IMPLEMENT a simple program which prints a message.\n",
     "        Console.WriteLine(\"If you can see this, then you obvisously have access.\");\n",
-    "\n",
     "    }\n",
     "\n",
     "\n",
@@ -319,7 +318,6 @@
     "    {\n",
     "        // IMPLEMENT a simple program which prints a message.\n",
     "        Console.WriteLine(\"If you can see this, then I suck at security.\");\n",
-    "\n",
     "    }\n",
     "\n",
     "}"
@@ -477,6 +475,17 @@
       ],
       "languageName": null,
       "name": "vscode"
+     },
+     {
+      "aliases": [
+       "js"
+      ],
+      "languageName": "JavaScript",
+      "name": "javascript"
+     },
+     {
+      "aliases": [],
+      "name": "webview"
      }
     ]
    }
