modified:   9. Methods/An Overview.ipynb modified:   9. Methods/Declaration.ipynb renamed:    9. Methods/Invocation.ipynb -> 9. Methods/Invocation/Overview.ipynb new file:   9. Methods/Invocation/Parameters.ipynb

--- a/9. Methods/Invocation/Overview.ipynb
+++ b/9. Methods/Invocation/Overview.ipynb
@@ -27,7 +27,8 @@
     }
    },
    "source": [
-    "## Declaration\n",
+    "## Invocation\n",
+    "### Overview\n",
     "___"
    ]
   },
@@ -43,95 +44,10 @@
     }
    },
    "source": [
-    "To *declare* a **Method** means to register the method in our program.    \n",
-    "The following is a generalization of **Method** *declaration*:"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
-   "source": [
-    "```c#\n",
-    "[access_modifier] return_type method_name ( [param_list] )\n",
-    "```"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
-   "source": [
-    "There are some **mandatory** elements to include when *declaring* a method: \n",
-    "- **Type** of the result, returned by the method -– `return_type`. \n",
-    "- Method’s **name** -– `method_name`. \n",
-    "- List of **parameters** to the method –- `param_list` \n",
-    "  - it can be *empty list* or it can consist of a *sequence of parameters* declarations.\n",
-    "  - The *round brackets* – `(` and `)`, are always placed after the method’s **name**, no matter whether  it has any **parameters** or not."
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
-   "source": [
-    "<br>"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
-   "source": [
-    "### Method Signature"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
-   "source": [
-    "In object-oriented programming, a **Method** is *identified* by a **pair of elements** specified within its declaration: \n",
-    "- **name** of the Method, \n",
-    "- a list of **parameters** passed into the Method.   \n",
+    "**Invoking** or **calling** a Method is actually the process of simply executing the code contained in the Method’s body.  \n",
     "   \n",
-    "These two elements define the so-called Method **specification** (often can be found as a **Method** *signature*).   \n",
-    "The following is a generalization of **Method** *signature*:"
+    "It is very easy to **invoke** a Method.  \n",
+    "The only thing that has to be done is to reference the Method’s *signature*:"
    ]
   },
   {
@@ -147,7 +63,7 @@
    },
    "source": [
     "```c#\n",
-    "method_name ( [param_list] )\n",
+    "method_name ( [ param_list ] );\n",
     "```"
    ]
   },
@@ -163,132 +79,13 @@
     }
    },
    "source": [
-    "Here we must note that the **Type** of returned value of a method is only part of its *declaration*, not of its *signature*. Hence, the `<return_type>` is *not* part of the Method *signature*. The reason is that if two methods differ only by their return value types, for the program, it is not clear enough which of them must be called."
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
-   "source": [
-    "<br>"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
-   "source": [
-    "### Method Naming Conventions"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
-   "source": [
-    "It is recommended, when declaring a method, to follow the rules for method naming suggested by Microsoft:   \n",
-    "- The **name** of a method must start with capital letter. \n",
-    "- The *PascalCase* rule must be applied, i.e. each new word, that concatenates so to form the method name, must start with *capital letter*.\n",
-    "- It is recommended that the method name must consist of *verb*, or *verb* *and* *noun*."
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
-   "source": [
-    "Here some examples of well named methods: \n",
-    "```\n",
-    "Print \n",
-    "GetName\n",
-    "PlayMusic \n",
-    "SetUserName\n",
-    "```"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
-   "source": [
-    "Here some examples of poorly named methods: \n",
-    "```\n",
-    "Abc11 \n",
-    "Yellow___Black \n",
-    "foo \n",
-    "_Bar\n",
-    "```"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
-   "source": [
-    "<br>"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
-   "source": [
-    "### Introducing Modifiers"
+    "To clarify how method **invocation** works,  \n",
+    "the following example shows how Some Arbitrary Method might be **called**:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -302,23 +99,297 @@
    },
    "outputs": [],
    "source": [
-    "public class AccessModifierExample\n",
+    "// DECLARATION of a locally-scoped, static Method.\n",
+    "static void SomeArbitraryMethod()\n",
     "{\n",
     "\n",
-    "    // DECLARE a Method which is publicly accessible beyond the scope of the class\n",
-    "    public void PrintPublic()\n",
+    "    // IMPLEMENTATION of the Method\n",
+    "    Console.WriteLine(\"Here's some arbitrary static Method\");\n",
+    "    \n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Here's some arbitrary static Method\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "// INVOCATION of the Method\n",
+    "\n",
+    "SomeArbitraryMethod();"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "### Who Takes Control over the Program when We Invoke a Method?"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "When a Method executes, it takes control over the program.    \n",
+    "   \n",
+    "If, in the caller Method, however, we call another one, the caller will then give the control to the called Method. \n",
+    "\n",
+    "The called Method will return back the control to the caller."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "Suppose we define the following class containing a simple Method for printing a Logo and a `Main()` Method where the `PrintLogo()` Method will be called."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "// define a MethodControlTest class to serve as an example\n",
+    "class MethodControlTest\n",
+    "{\n",
+    "\n",
+    "    // DECLARE a simple static Method that doesn't return anything\n",
+    "    static void PrintLogo()\n",
     "    {\n",
-    "        // IMPLEMENT a simple program which prints a message.\n",
-    "        Console.WriteLine(\"If you can see this, then you obvisously have access.\");\n",
+    "        // IMPLEMENT a basic message on the console that prints \n",
+    "        // Microsoft's name and website  \n",
+    "        Console.WriteLine(\"Microsoft\");\n",
+    "        Console.WriteLine(\"www.microsoft.com\");\n",
     "    }\n",
     "\n",
-    "\n",
-    "    // DECLARE a Method which is NOT accessible beyond the scope of the class\n",
-    "    private void PrintPrivate()\n",
+    "    // declare a Main Method representing the Top-Level of the example program\n",
+    "    public void Main()\n",
     "    {\n",
-    "        // IMPLEMENT a simple program which prints a message.\n",
-    "        Console.WriteLine(\"If you can see this, then I suck at security.\");\n",
+    "        // ... Some code here ...\n",
+    "        \n",
+    "        PrintLogo();\n",
+    "    \n",
+    "        // ... Some code here ...\n",
     "    }\n",
+    "    \n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Microsoft\n",
+      "www.microsoft.com\n"
+     ]
+    }
+   ],
+   "source": [
+    "// Upon instantiating the parent class and INVOKING the Method,\n",
+    "// we acheive the desired output\n",
+    "\n",
+    "new MethodControlTest().Main()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "But what was the *order of control* between the `Main()` and `PrintLogo()` Methods?"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "![ufukkedup](../../_img/Invocation%20Control%20Order.jpg)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "- First we begin with the code of Method `Main()`, where it is marked with ($1$),\n",
+    "- Then the control of the program will be given to the Method `PrintLogo()` – the dotted arrow ($2$). \n",
+    "- This will cause the execution of the code in Method `PrintLogo()`, numbered with ($3$).\n",
+    "-  When the Method `PrintLogo()` work is done, the control over the program is returned back to the Method `Main()` – dotted arrow ($4$). \n",
+    "-  Execution of `Main()` will continue from the line after `PrintLogo()` call – marked with ($5$)."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "### Where Can a Method Be Invoked From?"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "Suppose we declare the following Method that is scoped at the *Top-Level*   \n",
+    "(in the `Main()` Method of a class) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "static void TopLevelMethod()\n",
+    "{\n",
+    "\n",
+    "    Console.WriteLine(\"I'm a Method that was declared at the Top-Level.\");\n",
     "\n",
     "}"
    ]
@@ -350,15 +421,12 @@
     }
    },
    "source": [
-    "In the example above, we define a **public** method by the modifier `public`.    \n",
-    "It is a special type modifier, also called  an *access modifier*, used permit the Method to be called by any C# class, no matter where.     \n",
-    "   \n",
-    "**Public** access modifiers do *not* impose restrictions in the meaning of “who” can call them."
+    "The Method may then be invoked from anywhere else in the Top-Level Method – `Main()`:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -375,15 +443,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "If you can see this, then you obvisously have access.\r\n"
+      "I'm a Method that was declared at the Top-Level.\r\n"
      ]
     }
    ],
    "source": [
-    "// Instantiate the class \n",
-    "// and INVOKE the Method\n",
-    "\n",
-    "new AccessModifierExample().PrintPublic()"
+    "TopLevelMethod();"
    ]
   },
   {
@@ -413,14 +478,55 @@
     }
    },
    "source": [
-    "Conversely, another access modifier that we can use is the modifier `private`.   \n",
-    "    \n",
-    "Its function is *opposite* to that of the `public`, i.e. if a method is declared by access modifier `private`, it *cannot* be called from anywhere, except *from the class in which it is declared*."
+    "Now suppose we declared *some other Method* which attempts to call the Top-Level Method:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "static void SomeOtherMethod()\n",
+    "{\n",
+    "    Console.WriteLine(\n",
+    "        \"Do I have access to a Top Level Method outside of this scope?\"\n",
+    "    );\n",
+    "\n",
+    "    // Execute the Top Level Method which is declared\n",
+    "    // outside of this Other Method's scope  \n",
+    "    TopLevelMethod();\n",
+    "}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "Below, we see proof demonstrating that the Top-Level Method may also be successfully invoked from *some other Method*:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -434,20 +540,16 @@
    },
    "outputs": [
     {
-     "ename": "Error",
-     "evalue": "(5,29): error CS0122: 'AccessModifierExample.PrintPrivate()' is inaccessible due to its protection level",
-     "output_type": "error",
-     "traceback": [
-      "(5,29): error CS0122: 'AccessModifierExample.PrintPrivate()' is inaccessible due to its protection level"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Do I have access to a Top Level Method outside of this scope?\n",
+      "I'm a Method that was declared at the Top-Level.\n"
      ]
     }
    ],
    "source": [
-    "// Instantiate the class \n",
-    "// and INVOKE the Method, \n",
-    "// resulting in an error due to access restrictions\n",
-    "\n",
-    "new AccessModifierExample().PrintPrivate()"
+    "SomeOtherMethod();"
    ]
   }
  ],
@@ -470,25 +572,14 @@
       "name": "csharp"
      },
      {
+      "aliases": [],
+      "name": ".NET"
+     },
+     {
       "aliases": [
        "frontend"
       ],
       "name": "vscode"
-     },
-     {
-      "aliases": [
-       "js"
-      ],
-      "languageName": "JavaScript",
-      "name": "javascript"
-     },
-     {
-      "aliases": [],
-      "name": "webview"
-     },
-     {
-      "aliases": [],
-      "name": ".NET"
      },
      {
       "aliases": [
@@ -502,6 +593,13 @@
       "aliases": [],
       "languageName": "HTML",
       "name": "html"
+     },
+     {
+      "aliases": [
+       "js"
+      ],
+      "languageName": "JavaScript",
+      "name": "javascript"
      },
      {
       "aliases": [],
@@ -528,6 +626,10 @@
      {
       "aliases": [],
       "name": "value"
+     },
+     {
+      "aliases": [],
+      "name": "webview"
      }
     ]
    }
