--- a/9. Methods/An Overview.ipynb
+++ b/9. Methods/An Overview.ipynb
@@ -301,10 +301,12 @@
       "aliases": [
        "frontend"
       ],
+      "languageName": null,
       "name": "vscode"
      },
      {
       "aliases": [],
+      "languageName": null,
       "name": ".NET"
      },
      {
