modified:   9. Methods/Invocation/Overview.ipynb

--- a/9. Methods/Invocation/Overview.ipynb
+++ b/9. Methods/Invocation/Overview.ipynb
@@ -99,7 +99,7 @@
    },
    "outputs": [],
    "source": [
-    "// DECLARATION of a locally-scoped, static Method.\n",
+    "// DECLARATION of a static Method scoped at the Top-Level.\n",
     "static void SomeArbitraryMethod()\n",
     "{\n",
     "\n",
